src/test/ui/unboxed-closures/unboxed-closures-infer-argument-types-two-region-pointers.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/unboxed-closures-infer-argument-types-two-region-pointers.rs:17:15
   |
LL |         x.set(y);
   |               ^
   |
note: ...the reference is valid for the anonymous lifetime #3 defined on the body at 16:14...
  --> $DIR/unboxed-closures-infer-argument-types-two-region-pointers.rs:16:14
   |
LL |       doit(0, &|x, y| {
   |  ______________^
LL | |         x.set(y);
LL | |     });
   | |_____^
note: ...but the borrowed content is only valid for the anonymous lifetime #4 defined on the body at 16:14
  --> $DIR/unboxed-closures-infer-argument-types-two-region-pointers.rs:16:14
   |
LL |       doit(0, &|x, y| {
   |  ______________^
LL | |         x.set(y);
LL | |     });
   | |_____^

error: aborting due to previous error

